# ExamenDesarrollo

./: README.md
test_uce/: hello.py  main.py  pyproject.toml
test_uce/ExamenDesarrollo/: README.md
